--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -15,7 +15,7 @@
 }
 .avatar-header {
   margin-top: -5px;
-  padding: 15px;
+  padding: 15px 15px 5px 15px;
   h5 {
     font-size: 14px;
     font-weight: lighter;
