--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -67,10 +67,10 @@
               </div>
               <hr>
               <div class="request-contact">
-                <% if booking.user.conversations.first.nil? %>
-                  <%= link_to "Contacter", new_messages_path(booking.user) %>
-                <% else %>
+                <% if conversation_exists(booking.user, booking.slot.user) %>
                   <%= link_to "Contacter", conversations_path(booking.user) %>
+                <% else %>
+                  <%= link_to "Contacter", new_messages_path(booking.user) %>
                 <% end %>
               </div>
               <hr>
@@ -152,17 +152,17 @@
                     <%= link_to user_path(booking.slot.user) do %>
                       <strong>Dr <%= booking.slot.user.first_name %> <%= booking.slot.user.last_name %></strong>
                     <% end %>
-                    <p>Du <%= l(booking.start_date, format: "%e %B %Y")  %></p>
-                    <p>Au <%= l(booking.end_date, format: "%e %B %Y")  %></p>
+                    <p>Du <%= l(booking.start_date, format: "%e %B %Y") %></p>
+                    <p>Au <%= l(booking.end_date, format: "%e %B %Y") %></p>
                   <% end %>
                   </div>
                 </div>
                 <hr>
                 <div class="request-contact">
-                  <% if booking.slot.user.conversations.where(user2_id: current_user.id).first.nil? %>
-                    <%= link_to "Contacter", new_messages_path(booking.slot.user) %>
-                  <% else %>
+                  <% if conversation_exists(booking.user, booking.slot.user) %>
                     <%= link_to "Contacter", conversations_path(booking.slot.user) %>
+                  <% else %>
+                    <%= link_to "Contacter", new_messages_path(booking.slot.user) %>
                   <% end %>
                 </div>
                 <hr>
