--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,7 +16,7 @@
                     <% else %>
                       <%= cl_image_tag @user.avatar.path, width: 100, height: 100, crop: :fill, :class => "avatar-superextralarge", id: "edit-avatar" %>
                     <% end %>
-                    <div id="avatar-edit-filter" class="imgDescription-hidden"><i class="fa fa-pencil">  Changer</i></div>
+                    <div id="avatar-edit-filter" class="imgDescription-hidden"><i class="fa fa-pencil"></i><span> Editer</span></div>
                   </div>
                 </div>
                 <div>
