--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,8 +1,7 @@
 <div class="nav-side-menu">
   <div class="brand">
     <div class="mobile-menu">
-      <i class="fa fa-bars toggle-btn flex-item" data-toggle="collapse" data-target="#menu-content"></i>
-      <span class="flex-item" data-toggle="collapse" data-target="#menu-content"> Menu</span>
+      <span class="flex-item" data-toggle="collapse" data-target="#menu-content"> Menu</span><i class="fa fa-lg fa-angle-down"></i>
     </div>
   </div>
 
