--- a/app/views/bookings/index_accepted_bookings.html.erb
+++ b/app/views/bookings/index_accepted_bookings.html.erb
@@ -19,20 +19,19 @@
             <p><%= practice_user.first_name %> <strong><%= practice_user.last_name %></strong></p>
             <p><em><%= practice_user.has_practice ? "Remplacé(e)" : "Remplaçant" %></em></p>
           </div>
-          <div class="inner-card-info light-padding">
-
-            <p>
+          <div class="inner-card-info light-padding hidden-xs">
+            <ul class="fa-ul">
               <% if practice_user.validated %>
-                <i class="fa fa-check fa-fw"></i> Identité vérifiée par RemplaMatch
+                <li><i class="fa fa-check fa-fw"></i> Identité vérifiée par RemplaMatch</li>
               <% else %>
-                <i class="fa fa-times fa-fw"></i> Identité non-vérifiée par RemplaMatch
+                <li><i class="fa fa-times fa-fw"></i> Identité non-vérifiée par RemplaMatch</li>
               <% end %>
-            </p>
+            </ul>
           </div>
         </div>
         <div class="card-split" style="border-right: 1px solid #eee;"></div>
         <div class="card-split">
-          <%= image_tag "replacement_icon_green.png", style: "width: 40px; position: relative; left: -20px; background-color: white;" %>
+          <%#= image_tag "replacement_icon_green.png", style: "width: 40px; position: relative; left: -20px; background-color: white;" %>
         </div>
         <div class="inner-card">
           <div class="inner-card-header text-center light-padding">
@@ -40,28 +39,24 @@
             <p><%= locum_user.first_name %> <strong><%= locum_user.last_name %></strong></p>
             <p><em><%= locum_user.has_practice ? "Remplacé(e)" : "Remplaçant" %></em></p>
           </div>
-          <div class="inner-card-info light-padding">
-            <p>
-              <i class="fa fa-check fa-fw"></i> Attestation d'inscription à l'Ordre ou licence de remplacement
-            </p>
-            <p>
-              <i class="fa fa-times fa-fw"></i> Attestation d'assurance Responsabilité Civile Professionnelle
-            </p>
-            <p>
+          <div class="inner-card-info light-padding hidden-xs">
+            <ul class="fa-ul">
+              <li><i class="fa fa-check fa-fw"></i> Attestation d'inscription à l'Ordre ou licence de remplacement<i class="fa fa-fw fa-file"></i></li>
+              <li><i class="fa fa-times fa-fw"></i> Attestation d'assurance Responsabilité Civile Professionnelle<i class="fa fa-fw fa-file"></i></li>
               <% if practice_user.validated %>
-                <i class="fa fa-check fa-fw"></i> Identité vérifiée par RemplaMatch
+                <li><i class="fa fa-check fa-fw"></i> Identité vérifiée par RemplaMatch</li>
               <% else %>
-                <i class="fa fa-times fa-fw"></i> Identité non-vérifiée par RemplaMatch
+                <li><i class="fa fa-times fa-fw"></i> Identité non-vérifiée par RemplaMatch</li>
               <% end %>
-            </p>
+            </ul>
           </div>
         </div>
       </div>
       <hr>
       <div class="booking-card-pre-footer light-padding">
-        <p><i class="fa fa-check fa-fw"></i> Contrat signé</p>
-        <div><%= image_tag "contract_icon_green.png", style: "width: 30px; position: relative; left: 17px;" %></div>
-        <p><i class="fa fa-times fa-fw"></i> Contrat en attente de signature</p>
+        <!-- <p><i class="fa fa-check fa-fw"></i> Contrat signé</p> -->
+        <span><%= image_tag "contract_icon_green.png", style: "width: 30px; margin: 2px 10px;" %></span><span> Contrat de remplacement</span>
+        <!-- <p><i class="fa fa-times fa-fw"></i> Contrat en attente de signature</p> -->
       </div>
 
       <div class="booking-card-footer text-center light-padding"><i class="fa fa-share fa-lg"></i><p>Valider et envoyer les documents à l'Ordre</p></div>
