--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "logo-2.png" %>
-    <span id="logo-text">RemplaMatch</span>
+    <span class="hidden-xs" id="logo-text">RemplaMatch</span>
   <% end %>
 
   <!-- Right Navigation -->
@@ -25,9 +25,9 @@
           </form>
       </div>
 
-      <%= link_to calendar_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+      <%= link_to accepted_bookings_path, class: "navbar-wagon-item navbar-wagon-link" do %>
         <div class="badge-container">
-          <i class="fa fa-calendar"></i>
+          <i class="fa fa-users"></i>
           <% if current_user %>
             <% if pending_requests_count > 0 %>
               <div class="badge badge-blue">
@@ -39,6 +39,12 @@
               </div>
             <% end %>
           <% end %>
+        </div>
+      <% end %>
+
+      <%= link_to calendar_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+        <div class="badge-container">
+          <i class="fa fa-calendar"></i>
         </div>
       <% end %>
 
