--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,16 +1,17 @@
 <div class="navbar-wagon navbar-wagon-fixed">
-  <!-- Logo -->
-  <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag "logo-2.png" %>
-    <span id="logo-text">RemplaMatch</span>
-  <% end %>
 
+  <div>
+    <!-- Logo -->
+    <%= link_to root_path, class: "navbar-wagon-brand" do %>
+      <%= image_tag "logo-2.png" %>
+      <span class="hidden-xs" id="logo-text">RemplaMatch</span>
+    <% end %>
+  </div>
   <!-- Right Navigation -->
-  <div class="navbar-wagon-right">
+  <% if user_signed_in? %>
 
+    <div class="navbar-wagon-right">
     <!-- Search form -->
-    <% if user_signed_in? %>
-
       <div id="search-div-navbar" class="hidden-xs">
         <% if current_user.has_practice %>
           <form action="/search_locums" class="navbar-wagon-search">
@@ -25,48 +26,44 @@
           </form>
       </div>
 
-      <%= link_to calendar_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-      <div class="badge-container">
-        <i class="fa fa-calendar"></i>
-          <% if current_user %>
-        <div class="badge-notification">
-          <% if pending_requests_count > 0 %>
-          <div class="badge badge-blue">
-            <%= pending_requests_count %>
+      <div>
+        <%= link_to calendar_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+        <div class="badge-container">
+          <i class="fa fa-calendar"></i>
+          </div>
+        <% end %>
+      </div>
+
+      <div>
+        <%= link_to accepted_bookings_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+          <div class="badge-container">
+            <i class="fa fa-users"></i>
+            <% if current_user %>
+          <div class="badge-notification">
+            <% if pending_requests_count > 0 %>
+            <div class="badge badge-blue">
+              <%= pending_requests_count %>
+            </div>
+            <% end %>
           </div>
           <% end %>
         </div>
         <% end %>
       </div>
-      <% end %>
-
-    <% end %>
-
-    <!-- Icon to home page if user not signed_in -->
-    <% if !user_signed_in? %>
-      <div class="hidden-xs">
-        <%= link_to root_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-          <div class="badge-container">
-            <i class="fa fa-home"></i>
-          </div>
-        <% end %>
-      </div>
-    <% end %>
-
-    <!-- Different navigation if login or not -->
-    <% if user_signed_in? %>
 
       <!-- Messages -->
-        <%= link_to conversations_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-          <div class="badge-container">
-            <i class="fa fa-envelope-o"></i>
-            <% if !@unread_messages.nil? && current_user.unread_conversations_count > 0 %>
-              <div class="badge badge-blue">
-                <%= current_user.unread_conversations_count %>
+        <div>
+          <%= link_to conversations_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+            <div class="badge-container">
+              <i class="fa fa-envelope-o"></i>
+              <% if !@unread_messages.nil? && current_user.unread_conversations_count > 0 %>
+                <div class="badge badge-blue">
+                  <%= current_user.unread_conversations_count %>
+                </div>
+              <% end %>
               </div>
-            <% end %>
-          </div>
-        <% end %>
+          <% end %>
+        </div>
       <!-- Fin de Messages -->
 
         <div class="navbar-name hidden-xs">
@@ -76,46 +73,55 @@
         </div>
 
       <!-- Profile picture and dropdown -->
-      <div class="navbar-wagon-item hidden-xs">
-        <div class="dropdown">
+        <div class="navbar-wagon-item hidden-xs">
+          <div class="dropdown">
 
-            <% if current_user.avatar.nil? %>
-              <%= image_tag 'placeholder_pic.png', class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-            <% else %>
-              <%= cl_image_tag current_user.avatar.path, width: 30, height: 30, crop: :fill, :class => "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-            <% end %>
-            <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-              <li>
-                <%= link_to user_path(current_user) do %>
-                  <i class="fa fa-user"></i> <%= t ".profile", default: "Mon profil" %>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to root_path do %>
-                  <i class="fa fa-home"></i>  <%= t ".profile", default: "Accueil" %>
-                <% end %>
-              </li>
-              <li>
-                <%= link_to destroy_user_session_path, method: :delete do %>
-                  <i class="fa fa-sign-out"></i>  <%= t ".sign_out", default: "Déconnexion" %>
-                <% end %>
-              </li>
-            </ul>
+              <% if current_user.avatar.nil? %>
+                <%= image_tag 'placeholder_pic.png', class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+              <% else %>
+                <%= cl_image_tag current_user.avatar.path, width: 30, height: 30, crop: :fill, :class => "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+              <% end %>
+              <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+                <li>
+                  <%= link_to user_path(current_user) do %>
+                    <i class="fa fa-user"></i> <%= t ".profile", default: "Mon profil" %>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to root_path do %>
+                    <i class="fa fa-home"></i>  <%= t ".profile", default: "Accueil" %>
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to destroy_user_session_path, method: :delete do %>
+                    <i class="fa fa-sign-out"></i>  <%= t ".sign_out", default: "Déconnexion" %>
+                  <% end %>
+                </li>
+              </ul>
 
+          </div>
         </div>
-      </div>
+    </div>
 
     <% else %>
 
-      <!-- Login text link -->
-      <div class="hidden-xs">
-        <%= link_to t(".sign_in", default: "Connexion"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>|<%= link_to t(".sign_up", default: "Inscription"), new_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      </div>
+      <div class="navbar-wagon-right">
+         <!-- Icon to home page if user not signed_in -->
+         <div class="hidden-xs">
+          <%= link_to root_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+          <div class="badge-container">
+            <i class="fa fa-home"></i>
+          </div>
+          <% end %>
+        </div>
 
-    <% end %>
+        <!-- Login text link -->
+        <div class="hidden-xs">
+          <%= link_to t(".sign_in", default: "Connexion"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>|<%= link_to t(".sign_up", default: "Inscription"), new_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
+        </div>
+    </div>
 
-  </div>
-
+  <% end %>
   <!-- Dropdown list appearing on mobile only -->
   <div class="navbar-wagon-item hidden-sm hidden-md hidden-lg">
     <div class="dropdown">
@@ -157,24 +163,7 @@
       </ul>
     </div>
   </div>
+  </div>
 </div>
 <div class="margin-navbar"></div>
-
-<% #content_for(:after_js) do %>
-   // <script>
-
-  // var pusher = new Pusher('a004fee566cb956d3ba9', {
-  //     cluster: 'eu',
-  //     encrypted: true
-  //   });
-
-  // var new_bookings_channel = pusher.subscribe("new-booking-notification");
-
-  // comments_channel.bind('new_booking_event', function(data) {
-  //   var new_notif_number = parseInt($("#badge-notifications").text() || "0") + 1;
-  //   $("#badge-notifications").text(new_notif_number);
-  // });
-
-  // </script>
-<%# end %>
 
