--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -53,10 +53,20 @@ h4 {
 }
 .single_dispo{
   background-color: white;
-  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.08), 0 1px 0 0 rgba(0, 0, 0, 0.03);
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 1px 0 0 rgba(0, 0, 0, 0.08);
   border-radius: 5px;
   padding: 10px;
-  font-size: 14px;
+  font-size: 13px;
+  color: #888;
+  label {
+    font-weight: normal;
+  }
+  input {
+    border: 1px solid #E6E6E6;
+  }
+  input:focus {
+    border: 1px solid #CCCCCC;
+  }
 }
 .doc_resume {
   font-size: 32px;
@@ -87,9 +97,25 @@ h4 {
 .slots_reviews{
   margin-top: -184px;
   top: 20px;
-  right:20px
+  right:20px;
+  .col-xs-12 {
+    margin-left: 15px;
+  }
 }
 .identity-checked {
   color: $green;
   font-weight: bold;
+}
+#booking_commission {
+  font-size: 13px;
+  width: 25%;
+  height: 20px;
+  padding: 0px 5px;
+  margin-left: 10px;
+}
+.btn-slot-card {
+  font-size: 13px;
+  width: 85%;
+  margin-top: 10px;
+  margin-left: 5px;
 }
