--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,7 +32,7 @@
                   <%= f.input :has_practice, collection: [['Je recherche des remplaçants', true], ['Je recherche des remplacements', false]], label: false, include_blank: false %>
                 </div>
                 <div>
-                    <%= f.input :address, placeholder: (@user.address.nil? || @user.address == "") ? "Addresse" : @user.address, label: false %>
+                    <%= f.input :address, placeholder: (@user.address.nil? || @user.address == "") ? "Addresse" : @user.address, label: false, id: "user_input_autocomplete_address" %>
                 </div>
               </div>
             </div>
