--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -75,7 +75,7 @@
                 <li><i class="fa fa-fw fa-home icon-profile"></i><p><%= human_housing(@user.housing) %></p></li>
                 <li>
                   <i class="fa fa-fw fa-money icon-profile"></i>
-                  <p id="p-comm">Versement souhaitée :</p>
+                  <p id="p-comm">Reversement moyen :</p>
                   <div class="small-comm-tag"><%= @user.commission %>%</div>
                 </li>
               <% else %>
@@ -93,7 +93,7 @@
                 </li>
                 <li>
                   <i class="fa fa-fw fa-money icon-profile"></i>
-                  <p id="p-comm">Versement minimale souhaitée :</p>
+                  <p id="p-comm">Reversement habituel souhaitée :</p>
                   <div class="small-comm-tag"><%= @user.min_commission %>%</div>
                 </li>
               <% end %>
@@ -149,7 +149,7 @@
         <% if current_user != @user %>
           <div class="col-xs-12">
             <div class="user_availabilities">
-              <h4>Choisissez un créneau de remplacement</h4>
+              <h4>Envoyez une demande pour un créneau de remplacement</h4>
               <hr>
               <% if @user.slots.first.nil? %>
                 <div class="">
@@ -157,25 +157,7 @@
                 </div>
               <%else%>
                 <% @user.slots.each do |slot| %>
-                  <ul class="list-inline list-unstyled text-center">
-                    <% if slot.status == "pending" && slot.end_date > Date.today %>
-                      <% if current_user.numero_ordre.nil? %>
-                        <ul class="list-unstyled">
-
-                          <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id,slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), data: {toggle: "modal", target: "#contacter"}%>
-
-                          </li>
-                        </ul>
-                      <% else %>
-                        <ul class="list-unstyled">
-
-                          <li class= "single_dispo"><i class="fa fa-fw fa-calendar-plus-o"></i><%= link_to " #{l(slot.start_date, format: "%e %B %Y")} au #{l(slot.end_date, format: "%e %B %Y")}", user_bookings_path(@user, booking: { user_id: current_user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date }), method: :post, title: "Confirmer la demande", data: {confirm: 'Êtes-vous certain de vouloir effectuer cette demande ?', commit: "Valider", 'commit-class': "btn-primary btn-modal", cancel: "Annuler", 'cancel-class': "btn-default btn-modal" } %>
-
-                          </li>
-                        </ul>
-                      <% end %>
-                    <% end %>
-                  </ul>
+                  <%= render 'users/shared/slot_cards', slot: slot, user: @user, booking: @booking %>
                 <% end %>
               <% end %>
             </div>
